--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
     "express.js": "^1.0.0",
+    "firebase": "^9.7.0",
+    "firebaseui": "^6.0.1",
     "knex": "^2.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.16",
