--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
   "author": "s1xine",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
+    "alert": "^5.0.10",
     "body-parser": "^1.20.0",
     "ejs": "^3.1.7",
     "express": "^4.18.1",
-    "express.js": "^1.0.0",
-    "firebase": "^9.7.0",
-    "firebaseui": "^6.0.1",
-    "knex": "^2.0.0",
     "lodash": "^4.17.21",
-    "nodemon": "^2.0.16",
-    "pg": "^8.7.3"
+    "mongoose": "^6.3.2",
+    "mongoose-encryption": "^2.1.2",
+    "nodemon": "^2.0.16"
   }
 }
